--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,29 @@
-.App {
-  text-align: center;
+.appWrapper {
+  margin: 0 auto;
+  width: 90%;
+  min-width: 600px;
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
+.header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 50px;
+  padding: 5px;
   color: white;
 }
 
-.App-intro {
-  font-size: large;
+.logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.header p {
+  display: inline-block;
+}
+
+.searchWrapper {
+  margin: 15px 0;
 }
 
 @keyframes App-logo-spin {
