--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+th {
+  cursor: pointer;
+}
+
+i.material-icons {
+  font-size: 1em;
+  position: relative;
+  top: 2px;
+}
